// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section Component Section renders 1`] = `
<div>
  <div
    class="gds-section-container"
  >
    <div
      class="section-header collapsable"
      data-testid="DATA-TEST-ID"
    >
      TITLE
      <i
        class="icon open icon"
        icon="fal,chevron-left"
      />
    </div>
    <div
      class="section-body"
      style="transition: height 500ms linear; height: auto;"
    >
      <div
        id="CHILD1"
      />
      <div
        id="CHILD2"
      />
    </div>
    <div
      class="section-footer"
    />
  </div>
</div>
`;

exports[`Section Component Section renders 2`] = `
<div>
  <div
    class="gds-section-container"
  >
    <div
      class="section-header collapsable"
      data-testid="DATA-TEST-ID"
    >
      TITLE
      <i
        class="icon icon"
        icon="fal,chevron-left"
      />
    </div>
    <div
      class="section-body"
      style="transition: height 500ms linear; height: 0px;"
    >
      <div
        id="CHILD1"
      />
      <div
        id="CHILD2"
      />
    </div>
    <div
      class="section-footer"
    />
  </div>
</div>
`;

exports[`Section Component Section renders 3`] = `
<div>
  <div
    class="gds-section-container"
  >
    <div
      class="section-header collapsable"
      data-testid="DATA-TEST-ID"
    >
      TITLE
      <i
        class="icon open icon"
        icon="fal,chevron-left"
      />
    </div>
    <div
      class="section-body"
      style="transition: height 500ms linear; height: auto;"
    >
      <div
        id="CHILD1"
      />
      <div
        id="CHILD2"
      />
    </div>
    <div
      class="section-footer"
    />
  </div>
</div>
`;

exports[`Section Component Section renders not collapsable 1`] = `
<div>
  <div
    class="gds-section-container"
  >
    <div
      class="section-header"
      data-testid="DATA-TEST-ID"
    >
      TITLE
    </div>
    <div
      class="section-body"
      style="transition: height 500ms linear; height: auto;"
    >
      <div
        id="CHILD1"
      />
      <div
        id="CHILD2"
      />
    </div>
    <div
      class="section-footer"
    />
  </div>
</div>
`;

exports[`Section Component Section renders not collapsable 2`] = `
<div>
  <div
    class="gds-section-container"
  >
    <div
      class="section-header"
      data-testid="DATA-TEST-ID"
    >
      TITLE
    </div>
    <div
      class="section-body"
      style="transition: height 500ms linear; height: auto;"
    >
      <div
        id="CHILD1"
      />
      <div
        id="CHILD2"
      />
    </div>
    <div
      class="section-footer"
    />
  </div>
</div>
`;

exports[`Section Component Section renders not collapsable 3`] = `
<div>
  <div
    class="gds-section-container"
  >
    <div
      class="section-header"
      data-testid="DATA-TEST-ID"
    >
      TITLE
    </div>
    <div
      class="section-body"
      style="transition: height 500ms linear; height: auto;"
    >
      <div
        id="CHILD1"
      />
      <div
        id="CHILD2"
      />
    </div>
    <div
      class="section-footer"
    />
  </div>
</div>
`;
